Add new plots to paper

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -357,6 +357,43 @@ impossible to locate even with VLBI.
   \caption{$i=40^\circ$, $\psi=40^\circ$, $\beta=0.90$}
 \end{figure}
 
+\clearpage
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet structure in the source frame. $\beta=0.9, 0.8, 0.4$ from left to right.}
+\label{fig:srcframe}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90_obs.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80_obs.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40_obs.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet structure in the observer frame. $\beta=0.9, 0.8, 0.4$ from left to right.}
+\label{fig:obsframe}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90_ang.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80_ang.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40_ang.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet structure in angular coordinates. $\beta=0.9, 0.8, 0.4$ from left to right.}
+\label{fig:ang}
+\end{figure*}
 
 \bibliography{refs}
 \end{document}
