--- a/Paper/scratch.tex
+++ b/Paper/scratch.tex
@@ -24,3 +24,39 @@ down in mass or mass ratio or something?
 
   = 2.42\, \mathrm{degrees}.
 
+
+%% \begin{figure*}
+%% \begin{center}
+%%   \begin{tabular}{ccc}
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40.pdf}
+%%   \end{tabular}
+%% \end{center}
+%% \caption{Evolution of the binary separation.  Time $t$ is time since the gravitational wave induced phase began.}
+%% \label{fig:srcframe}
+%% \end{figure*}
+
+%% \begin{figure*}
+%% \begin{center}
+%%   \begin{tabular}{ccc}
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90_obs.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80_obs.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40_obs.pdf}
+%%   \end{tabular}
+%% \end{center}
+%% \caption{Evolution of the binary separation.  Time $t$ is time since the gravitational wave induced phase began.}
+%% \label{fig:obsframe}
+%% \end{figure*}
+
+%% \begin{figure*}
+%% \begin{center}
+%%   \begin{tabular}{ccc}
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90_ang.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80_ang.pdf} &
+%%     \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40_ang.pdf}
+%%   \end{tabular}
+%% \end{center}
+%% \caption{Evolution of the binary separation.  Time $t$ is time since the gravitational wave induced phase began.}
+%% \label{fig:ang}
+%% \end{figure*}
