Add chirps to paper

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -395,6 +395,31 @@ impossible to locate even with VLBI.
 \label{fig:ang}
 \end{figure*}
 
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology without accounting for opening angle
+    evolution}
+\label{fig:jet_nopsi}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology with opening angle evolution.}
+\label{fig:jet_psi}
+\end{figure*}
+
 \bibliography{refs}
 \end{document}
 
