Add latest plots

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -420,6 +420,63 @@ impossible to locate even with VLBI.
 \label{fig:jet_psi}
 \end{figure*}
 
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology with opening angle evolution.}
+\label{fig:jet_psi}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology with opening angle evolution.}
+\label{fig:jet_psi}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.0_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.0_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=1$}
+\label{fig:jet_mdot1.0}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot10.00_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot10.00_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=10$}
+\label{fig:jet_10.0}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot0.10_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot0.10_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=0.1$}
+\label{fig:jet_mdot0.1}
+\end{figure*}
+
 \bibliography{refs}
 \end{document}
 
