Made more changes suggested by Avi.

--- a/Paper/aas_macros.sty
+++ b/Paper/aas_macros.sty
@@ -42,6 +42,7 @@
 \def\aaps{\ref@jnl{A\&AS}}              % Astronomy and Astrophysics, Supplement
 \def\azh{\ref@jnl{AZh}}                 % Astronomicheskii Zhurnal
 \def\baas{\ref@jnl{BAAS}}               % Bulletin of the AAS
+\def\cjaa{\ref@jnl{CJAA}}  % Chinese Journal of Astronomy & Astrophysics
 \def\jrasc{\ref@jnl{JRASC}}             % Journal of the RAS of Canada
 \def\memras{\ref@jnl{MmRAS}}            % Memoirs of the RAS
 \def\mnras{\ref@jnl{MNRAS}}             % Monthly Notices of the RAS
