--- a/Paper/refs.bib
+++ b/Paper/refs.bib
@@ -1,3 +1,38 @@
+@ARTICLE{2012MNRAS.422.1306K,
+   author = {{Kulkarni}, G. and {Loeb}, A.},
+    title = "{Formation of galactic nuclei with multiple supermassive black holes at high redshifts}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1107.0517},
+ primaryClass = "astro-ph.CO",
+ keywords = {black hole physics, galaxies: evolution, galaxies: high-redshift, galaxies: kinematics and dynamics, galaxies: nuclei},
+     year = 2012,
+    month = may,
+   volume = 422,
+    pages = {1306-1323},
+      doi = {10.1111/j.1365-2966.2012.20699.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.422.1306K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2008ApJ...676...33D,
+   author = {{Di Matteo}, T. and {Colberg}, J. and {Springel}, V. and {Hernquist}, L. and 
+	{Sijacki}, D.},
+    title = "{Direct Cosmological Simulations of the Growth of Black Holes and Galaxies}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0705.2269},
+ keywords = {Cosmology: Theory, Galaxies: Active, Galaxies: Evolution, Galaxies: Formation, Hydrodynamics, Galaxies: Quasars: General},
+     year = 2008,
+    month = mar,
+   volume = 676,
+    pages = {33-53},
+      doi = {10.1086/524921},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...676...33D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2009CSci...97..841C,
    author = {{Choudhury}, T.~R.},
     title = "{Analytical Models of the Intergalactic Medium and Reionization}",
@@ -154,7 +189,8 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{2000ApJ...530....1M,
-   author = {{Miralda-Escud{\'e}}, J. and {Haehnelt}, M. and {Rees}, M.~J.
+
+author = {{Miralda-Escud{\'e}}, J. and {Haehnelt}, M. and {Rees}, M.~J.
 	},
     title = "{Reionization of the Inhomogeneous Universe}",
   journal = {\apj},
@@ -3107,5 +3143,562 @@ archivePrefix = "arXiv",
     pages = {1129-1136},
       doi = {10.1088/0004-637X/712/2/1129},
    adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...712.1129M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005LRR.....8....8M,
+   author = {{Merritt}, D. and {Milosavljevi{\'c}}, M.},
+    title = "{Massive Black Hole Binary Evolution}",
+  journal = {Living Reviews in Relativity},
+   eprint = {astro-ph/0410364},
+     year = 2005,
+    month = nov,
+   volume = 8,
+    pages = {8},
+      doi = {10.12942/lrr-2005-8},
+   adsurl = {http://adsabs.harvard.edu/abs/2005LRR.....8....8M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011ASL.....4..181C,
+   author = {{Colpi}, M. and {Dotti}, M.},
+    title = "{Massive Binary Black Holes in the Cosmic Landscape}",
+  journal = {Advanced Science Letters},
+     year = 2011,
+    month = feb,
+   volume = 4,
+    pages = {181-203},
+      doi = {10.1166/asl.2011.1205},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ASL.....4..181C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005PhRvL..95l1101P,
+   author = {{Pretorius}, F.},
+    title = "{Evolution of Binary Black-Hole Spacetimes}",
+  journal = {Physical Review Letters},
+   eprint = {gr-qc/0507014},
+ keywords = {Numerical relativity, Wave generation and sources, Classical black holes},
+     year = 2005,
+    month = sep,
+   volume = 95,
+   number = 12,
+      eid = {121101},
+    pages = {121101},
+      doi = {10.1103/PhysRevLett.95.121101},
+   adsurl = {http://adsabs.harvard.edu/abs/2005PhRvL..95l1101P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006PhRvL..96k1102B,
+   author = {{Baker}, J.~G. and {Centrella}, J. and {Choi}, D.-I. and {Koppitz}, M. and 
+	{van Meter}, J.},
+    title = "{Gravitational-Wave Extraction from an Inspiraling Configuration of Merging Black Holes}",
+  journal = {Physical Review Letters},
+   eprint = {gr-qc/0511103},
+ keywords = {Numerical relativity, Wave generation and sources, Classical black holes, Relativity and gravitation},
+     year = 2006,
+    month = mar,
+   volume = 96,
+   number = 11,
+      eid = {111102},
+    pages = {111102},
+      doi = {10.1103/PhysRevLett.96.111102},
+   adsurl = {http://adsabs.harvard.edu/abs/2006PhRvL..96k1102B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006PhRvL..96k1101C,
+   author = {{Campanelli}, M. and {Lousto}, C.~O. and {Marronetti}, P. and 
+	{Zlochower}, Y.},
+    title = "{Accurate Evolutions of Orbiting Black-Hole Binaries without Excision}",
+  journal = {Physical Review Letters},
+   eprint = {gr-qc/0511048},
+ keywords = {Numerical relativity, Post-Newtonian approximation, perturbation theory, related approximations, Wave generation and sources, Classical black holes},
+     year = 2006,
+    month = mar,
+   volume = 96,
+   number = 11,
+      eid = {111101},
+    pages = {111101},
+      doi = {10.1103/PhysRevLett.96.111101},
+   adsurl = {http://adsabs.harvard.edu/abs/2006PhRvL..96k1101C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2007PhRvL..99d1103L,
+   author = {{Loeb}, A.},
+    title = "{Observable Signatures of a Black Hole Ejected by Gravitational-Radiation Recoil in a Galaxy Merger}",
+  journal = {Physical Review Letters},
+   eprint = {astro-ph/0703722},
+ keywords = {Black holes},
+     year = 2007,
+    month = jul,
+   volume = 99,
+   number = 4,
+      eid = {041103},
+    pages = {041103},
+      doi = {10.1103/PhysRevLett.99.041103},
+   adsurl = {http://adsabs.harvard.edu/abs/2007PhRvL..99d1103L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJ...682..758S,
+   author = {{Shields}, G.~A. and {Bonning}, E.~W.},
+    title = "{Powerful Flares from Recoiling Black Holes in Quasars}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0802.3873},
+ keywords = {Black Hole Physics, Galaxies: Active, Galaxies: Quasars: General},
+     year = 2008,
+    month = aug,
+   volume = 682,
+    pages = {758-766},
+      doi = {10.1086/589427},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...682..758S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008PhRvL.101d1101K,
+   author = {{Kocsis}, B. and {Loeb}, A.},
+    title = "{Brightening of an Accretion Disk due to Viscous Dissipation of Gravitational Waves during the Coalescence of Supermassive Black Holes}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {0803.0003},
+ keywords = {Black holes, Gravitational waves: theory, Relativity and gravitation, Quasars},
+     year = 2008,
+    month = jul,
+   volume = 101,
+   number = 4,
+      eid = {041101},
+    pages = {041101},
+      doi = {10.1103/PhysRevLett.101.041101},
+   adsurl = {http://adsabs.harvard.edu/abs/2008PhRvL.101d1101K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011MNRAS.412...75S,
+   author = {{Stone}, N. and {Loeb}, A.},
+    title = "{Prompt tidal disruption of stars as an electromagnetic signature of supermassive black hole coalescence}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1004.4833},
+ primaryClass = "astro-ph.CO",
+ keywords = {black hole physics, gravitational waves, galaxies: nuclei},
+     year = 2011,
+    month = mar,
+   volume = 412,
+    pages = {75-80},
+      doi = {10.1111/j.1365-2966.2010.17880.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.412...75S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJ...672...83M,
+   author = {{MacFadyen}, A.~I. and {Milosavljevi{\'c}}, M.},
+    title = "{An Eccentric Circumbinary Accretion Disk and the Detection of Binary Massive Black Holes}",
+  journal = {\apj},
+   eprint = {astro-ph/0607467},
+ keywords = {Accretion, Accretion Disks, Stars: Binaries: General, Black Hole Physics, Galaxies: Nuclei, Hydrodynamics},
+     year = 2008,
+    month = jan,
+   volume = 672,
+    pages = {83-93},
+      doi = {10.1086/523869},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...672...83M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2007APS..APR.S1010B,
+   author = {{Bode}, N. and {Phinney}, S.},
+    title = "{Variability in Circumbinary Disks Following Massive Black Hole Mergers}",
+booktitle = {APS April Meeting Abstracts},
+     year = 2007,
+    month = apr,
+    pages = {1010},
+   adsurl = {http://adsabs.harvard.edu/abs/2007APS..APR.S1010B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005ApJ...622L..93M,
+   author = {{Milosavljevi{\'c}}, M. and {Phinney}, E.~S.},
+    title = "{The Afterglow of Massive Black Hole Coalescence}",
+  journal = {\apjl},
+   eprint = {astro-ph/0410343},
+ keywords = {Accretion, Accretion Disks, Black Hole Physics, Galaxies: Quasars: General, X-Rays: Galaxies},
+     year = 2005,
+    month = apr,
+   volume = 622,
+    pages = {L93-L96},
+      doi = {10.1086/429618},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...622L..93M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002ApJ...567L...9A,
+   author = {{Armitage}, P.~J. and {Natarajan}, P.},
+    title = "{Accretion during the Merger of Supermassive Black Holes}",
+  journal = {\apjl},
+   eprint = {astro-ph/0201318},
+ keywords = {Accretion, Accretion Disks, Black Hole Physics, Galaxies: Active, Galaxies: Nuclei, Gravitational Waves, Galaxies: Quasars: General},
+     year = 2002,
+    month = mar,
+   volume = 567,
+    pages = {L9-L12},
+      doi = {10.1086/339770},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...567L...9A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013CQGra..30x4009S,
+   author = {{Sesana}, A.},
+    title = "{Gravitational wave emission from binary supermassive black holes}",
+  journal = {Classical and Quantum Gravity},
+archivePrefix = "arXiv",
+   eprint = {1307.4086},
+ primaryClass = "astro-ph.CO",
+     year = 2013,
+    month = dec,
+   volume = 30,
+   number = 24,
+      eid = {244009},
+    pages = {244009},
+      doi = {10.1088/0264-9381/30/24/244009},
+   adsurl = {http://adsabs.harvard.edu/abs/2013CQGra..30x4009S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2000MNRAS.311..576K,
+   author = {{Kauffmann}, G. and {Haehnelt}, M.},
+    title = "{A unified model for the evolution of galaxies and quasars}",
+  journal = {\mnras},
+   eprint = {arXiv:astro-ph/9906493},
+ keywords = {BLACK HOLE PHYSICS, GALAXIES: FORMATION, GALAXIES: NUCLEI, QUASARS: GENERAL},
+     year = 2000,
+    month = jan,
+   volume = 311,
+    pages = {576-588},
+      doi = {10.1046/j.1365-8711.2000.03077.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2000MNRAS.311..576K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002MNRAS.336L..61H,
+   author = {{Haehnelt}, M.~G. and {Kauffmann}, G.},
+    title = "{Multiple supermassive black holes in galactic bulges}",
+  journal = {\mnras},
+   eprint = {arXiv:astro-ph/0208215},
+ keywords = {black hole physics, binaries: general, galaxies: formation, galaxies: nuclei},
+     year = 2002,
+    month = nov,
+   volume = 336,
+    pages = {L61-L64},
+      doi = {10.1046/j.1365-8711.2002.06056.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2002MNRAS.336L..61H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2007PASJ...59..427H,
+   author = {{Hayasaki}, K. and {Mineshige}, S. and {Sudou}, H.},
+    title = "{Binary Black Hole Accretion Flows in Merged Galactic Nuclei}",
+  journal = {\pasj},
+   eprint = {astro-ph/0609144},
+ keywords = {accretion, accretion disks, binary black holes, black hole physics, galaxies: nuclei},
+     year = 2007,
+    month = apr,
+   volume = 59,
+    pages = {427-441},
+      doi = {10.1093/pasj/59.2.427},
+   adsurl = {http://adsabs.harvard.edu/abs/2007PASJ...59..427H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009MNRAS.393.1423C,
+   author = {{Cuadra}, J. and {Armitage}, P.~J. and {Alexander}, R.~D. and 
+	{Begelman}, M.~C.},
+    title = "{Massive black hole binary mergers within subparsec scale gas discs}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0809.0311},
+ keywords = {accretion, accretion discs , black hole physics , galaxies: active , galaxies: nuclei},
+     year = 2009,
+    month = mar,
+   volume = 393,
+    pages = {1423-1432},
+      doi = {10.1111/j.1365-2966.2008.14147.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.393.1423C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1964PhRv..136.1224P,
+   author = {{Peters}, P.~C.},
+    title = "{Gravitational Radiation and the Motion of Two Point Masses}",
+  journal = {Physical Review},
+     year = 1964,
+    month = nov,
+   volume = 136,
+    pages = {1224-1232},
+      doi = {10.1103/PhysRev.136.B1224},
+   adsurl = {http://adsabs.harvard.edu/abs/1964PhRv..136.1224P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1993ApJ...409..130R,
+   author = {{Roos}, N. and {Kaastra}, J.~S. and {Hummel}, C.~A.},
+    title = "{A massive binary black hole in 1928 + 738?}",
+  journal = {\apj},
+ keywords = {Black Holes (Astronomy), Interacting Galaxies, Quasars, Radio Jets (Astronomy), Very Long Base Interferometry, Galactic Nuclei, Gravitational Waves},
+     year = 1993,
+    month = may,
+   volume = 409,
+    pages = {130-133},
+      doi = {10.1086/172647},
+   adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...409..130R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1982ApJ...262..478G,
+   author = {{Gower}, A.~C. and {Gregory}, P.~C. and {Unruh}, W.~G. and {Hutchings}, J.~B.
+	},
+    title = "{Relativistic precessing jets in quasars and radio galaxies - Models to fit high resolution data}",
+  journal = {\apj},
+ keywords = {Astronomical Models, Plasma Jets, Quasars, Radio Galaxies, Relativistic Plasmas, Synchrotron Radiation, Cosmology, Galactic Rotation, Kinematics, Precession, Red Shift},
+     year = 1982,
+    month = nov,
+   volume = 262,
+    pages = {478-496},
+      doi = {10.1086/160442},
+   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...262..478G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1981ApJ...246L.141H,
+   author = {{Hjellming}, R.~M. and {Johnston}, K.~J.},
+    title = "{An analysis of the proper motions of SS 433 radio jets}",
+  journal = {\apjl},
+ keywords = {Astronomical Models, Binary Stars, Radio Jets (Astronomy), Radio Stars, Stellar Mass Ejection, Stellar Rotation, Antenna Arrays, Radio Astronomy, Stellar Models, Synchrotron Radiation, Variable Stars, Very Long Base Interferometry},
+     year = 1981,
+    month = jun,
+   volume = 246,
+    pages = {L141-L145},
+      doi = {10.1086/183571},
+   adsurl = {http://adsabs.harvard.edu/abs/1981ApJ...246L.141H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2009astro2010S.235P,
+   author = {{Phinney}, E.~S.},
+    title = "{Finding and Using Electromagnetic Counterparts of Gravitational Wave Sources}",
+booktitle = {astro2010: The Astronomy and Astrophysics Decadal Survey},
+     year = 2009,
+   series = {Astronomy},
+   volume = 2010,
+archivePrefix = "arXiv",
+   eprint = {0903.0098},
+ primaryClass = "astro-ph.CO",
+    pages = {235},
+   adsurl = {http://adsabs.harvard.edu/abs/2009astro2010S.235P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014arXiv1412.5971P,
+   author = {{Paragi}, Z. and {Godfrey}, L. and {Reynolds}, C. and {Rioja}, M. and 
+	{Deller}, A. and {Zhang}, B. and {Gurvits}, L. and {Bietenholz}, M. and 
+	{Szomoru}, A. and {Bignall}, H. and {Boven}, P. and {Charlot}, P. and 
+	{Dodson}, R. and {Frey}, S. and {Garrett}, M. and {Imai}, H. and 
+	{Lobanov}, A. and {Reid}, M. and {Ros}, E. and {van Langevelde}, H. and 
+	{Zensus}, J.~A. and {Zheng}, X.~W. and {Alberdi}, A. and {Agudo}, I. and 
+	{An}, T. and {Argo}, M. and {Beswick}, R. and {Biggs}, A.~D. and 
+	{Brunthaler}, A. and {Campbell}, R.~M. and {Cimo}, G. and {Colomer}, F. and 
+	{Corbel}, S. and {Conway}, J. and {Cseh}, D. and {Deane}, R. and 
+	{Falcke}, H. and {Gabanyi}, K. and {Gawronski}, M. and {Gaylard}, M. and 
+	{Giovannini}, G. and {Giroletti}, M. and {Goddi}, C. and {Goedhart}, S. and 
+	{Gomez}, J.~L. and {Gunn}, A. and {Jung}, T. and {Kharb}, P. and 
+	{Klockner}, H.-R. and {Kording}, E. and {Kovalev}, Y.~Y. and 
+	{Kunert-Bajraszewska}, M. and {Lindqvist}, M. and {Lister}, M. and 
+	{Mantovani}, F. and {Marti-Vidal}, I. and {Mezcua}, M. and {McKean}, J. and 
+	{Middelberg}, E. and {Miller-Jones}, J. and {Moldon}, J. and 
+	{Muxlow}, T. and {O'Brien}, T. and {P{\'e}rez-Torres}, M. and 
+	{Pogrebenko}, S. and {Quick}, J. and {Rushton}, A.~P. and {Schilizzi}, R. and 
+	{Smirnov}, O. and {Sohn}, B.~W. and {Surcis}, G. and {Taylor}, G. and 
+	{Tingay}, S. and {Tudose}, V. and {van der Horst}, A. and {van Leeuwen}, J. and 
+	{Venturi}, T. and {Vermeulen}, R. and {Vlemmings}, W. and {de Witt}, A. and 
+	{Wucknitz}, O. and {Yang}, J.},
+    title = "{Very Long Baseline Interferometry with the SKA}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1412.5971},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+     year = 2014,
+    month = dec,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1412.5971P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2001ChJAA...1..236Q,
+   author = {{Qian}, S.-J. and {Zhang}, X.-Z. and {Krichbaum}, T.~P. and 
+	{Zensus}, J.~A. and {Witzel}, A. and {Kraus}, A. and {Britzen}, S. and 
+	{Ungerechts}, H. and {Lisenfeld}, U.},
+    title = "{Periodic Variations of the Jet Flow Lorentz Factor in 3C273}",
+  journal = {\cjaa},
+ keywords = {GALAXIES: JETS, QUASARS: INDIVIDUAL: 3C273, GALAXIES: NUCLEI, RADIO CONTINUUM: GALAXIES, RADIATION MECHANISMS: NONTHERMAL},
+     year = 2001,
+    month = jun,
+   volume = 1,
+    pages = {236-244},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ChJAA...1..236Q},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1980Natur.287..307B,
+   author = {{Begelman}, M.~C. and {Blandford}, R.~D. and {Rees}, M.~J.},
+    title = "{Massive black hole binaries in active galactic nuclei}",
+  journal = {\nat},
+ keywords = {Active Galactic Nuclei, Binary Stars, Black Holes (Astronomy), Stellar Evolution, Supermassive Stars, Astrophysics, Orbital Elements},
+     year = 1980,
+    month = sep,
+   volume = 287,
+    pages = {307-309},
+      doi = {10.1038/287307a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1980Natur.287..307B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009CQGra..26i4032H,
+   author = {{Haiman}, Z. and {Kocsis}, B. and {Menou}, K. and {Lippai}, Z. and 
+	{Frei}, Z.},
+    title = "{Identifying decaying supermassive black hole binaries from their variable electromagnetic emission}",
+  journal = {Classical and Quantum Gravity},
+archivePrefix = "arXiv",
+   eprint = {0811.1920},
+     year = 2009,
+    month = may,
+   volume = 26,
+   number = 9,
+      eid = {094032},
+    pages = {094032},
+      doi = {10.1088/0264-9381/26/9/094032},
+   adsurl = {http://adsabs.harvard.edu/abs/2009CQGra..26i4032H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012MNRAS.427.2680K,
+   author = {{Kocsis}, B. and {Haiman}, Z. and {Loeb}, A.},
+    title = "{Gas pile-up, gap overflow and Type 1.5 migration in circumbinary discs: application to supermassive black hole binaries}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1205.5268},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion discs, black hole physics, gravitational waves, galaxies: active},
+     year = 2012,
+    month = dec,
+   volume = 427,
+    pages = {2680-2700},
+      doi = {10.1111/j.1365-2966.2012.22118.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.427.2680K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013MNRAS.432.1468M,
+   author = {{McKernan}, B. and {Ford}, K.~E.~S. and {Kocsis}, B. and {Haiman}, Z.
+	},
+    title = "{Ripple effects and oscillations in the broad Fe K{$\alpha$} line as a probe of massive black hole mergers}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1303.7206},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion discs, gravitational waves, radiation mechanisms: general, planet-disc interactions, protoplanetary discs, galaxies: active},
+     year = 2013,
+    month = jun,
+   volume = 432,
+    pages = {1468-1482},
+      doi = {10.1093/mnras/stt567},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.432.1468M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.446L..36F,
+   author = {{Farris}, B.~D. and {Duffell}, P. and {MacFadyen}, A.~I. and 
+	{Haiman}, Z.},
+    title = "{Characteristic signatures in the thermal emission from accreting binary black holes}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1406.0007},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, gravitational waves},
+     year = 2015,
+    month = jan,
+   volume = 446,
+    pages = {L36-L40},
+      doi = {10.1093/mnrasl/slu160},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.446L..36F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003CQGra..20S..65H,
+   author = {{Hughes}, S.~A. and {Holz}, D.~E.},
+    title = "{Cosmology with coalescing massive black holes}",
+  journal = {Classical and Quantum Gravity},
+   eprint = {astro-ph/0212218},
+     year = 2003,
+    month = may,
+   volume = 20,
+    pages = {65},
+      doi = {10.1088/0264-9381/20/10/308},
+   adsurl = {http://adsabs.harvard.edu/abs/2003CQGra..20S..65H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005ApJ...629...15H,
+   author = {{Holz}, D.~E. and {Hughes}, S.~A.},
+    title = "{Using Gravitational-Wave Standard Sirens}",
+  journal = {\apj},
+   eprint = {astro-ph/0504616},
+ keywords = {Black Hole Physics, Cosmology: Observations, Cosmology: Theory, Galaxies: Nuclei, Cosmology: Gravitational Lensing, Gravitational Waves},
+     year = 2005,
+    month = aug,
+   volume = 629,
+    pages = {15-22},
+      doi = {10.1086/431341},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...629...15H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012A&A...545A.127R,
+   author = {{Roedig}, C. and {Sesana}, A. and {Dotti}, M. and {Cuadra}, J. and 
+	{Amaro-Seoane}, P. and {Haardt}, F.},
+    title = "{Evolution of binary black holes in self gravitating discs. Dissecting the torques}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1202.6063},
+ primaryClass = "astro-ph.CO",
+ keywords = {black hole physics, accretion, accretion disks, methods: numerical, hydrodynamics},
+     year = 2012,
+    month = sep,
+   volume = 545,
+      eid = {A127},
+    pages = {A127},
+      doi = {10.1051/0004-6361/201219986},
+   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...545A.127R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012ApJ...755...51N,
+   author = {{Noble}, S.~C. and {Mundim}, B.~C. and {Nakano}, H. and {Krolik}, J.~H. and 
+	{Campanelli}, M. and {Zlochower}, Y. and {Yunes}, N.},
+    title = "{Circumbinary Magnetohydrodynamic Accretion into Inspiraling Binary Black Holes}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1204.1073},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion disks, black hole physics, galaxies: nuclei, magnetohydrodynamics: MHD},
+     year = 2012,
+    month = aug,
+   volume = 755,
+      eid = {51},
+    pages = {51},
+      doi = {10.1088/0004-637X/755/1/51},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...755...51N},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
