--- a/Paper/scratch.tex
+++ b/Paper/scratch.tex
@@ -60,3 +60,253 @@ down in mass or mass ratio or something?
 %% \caption{Evolution of the binary separation.  Time $t$ is time since the gravitational wave induced phase began.}
 %% \label{fig:ang}
 %% \end{figure*}
+
+are expected to arise naturally in the context of the
+heirarchical formation of galaxies in which galaxies with their black
+holes merge and create black hole binaries (cite our paper, illustris
+papers, many other papers).  As such binaries are great tools to
+understand galaxy formation.  They may also be crucial to explain the
+occurancec of massive BHs today, which are routinely invoked for AGN
+feedback etc.  Binary BHs also probe the extreme limit of GR.  They
+are thus a tool to test GR and probe physics beyond it.
+
+Binary evolution proceeds through three phases.  Describe three
+stages.  Out of this binaries spent most of their time on pc scale
+separations.  These wide binaries are expected to leave signature in
+broad lines regions (cite Shen and Loeb).  There have been many
+attempts to detect these wide binaries but none have been detected so
+far (cite Decarli).
+
+Aprt from a stochastic gravitational wave background, LISA is expected
+to detect GW from individial sources.  These GWs are produced by a
+binary BHs. Briefly describe GW chirp here?  If one of these BHs is
+accreting, it is expected to have a jet.  Due to orbital motion of the
+accreting BH, the jet will precess.  We study this jet precession in
+this paper during the last stages of the binary evolution.  Any
+peculiar morphological features canact as an electromagnetic signature
+of the binary.  
+
+---------------
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology with opening angle evolution.}
+\label{fig:jet_psi}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_full.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom1.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_beta0_90_zoom2.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet morphology with opening angle evolution.}
+\label{fig:jet_psi}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.0_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.0_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=1$}
+\label{fig:jet_mdot1.0}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.00_image_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot1.00_image_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=1$}
+\label{fig:jet_mdot1.0_image}
+\end{figure*}
+
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{cc}
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot10.00_full}.pdf} &
+    \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot10.00_zoom1}.pdf} 
+  \end{tabular}
+\end{center}
+\caption{$a^4/M^3=10$}
+\label{fig:jet_10.0}
+\end{figure*}
+
+\begin{figure*}
+  \begin{center}
+    \begin{tabular}{cc}
+      \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot0.10_full}.pdf} &
+      \includegraphics*[width=\columnwidth]{{jet_i40_beta0.90_mdot0.10_zoom1}.pdf} 
+    \end{tabular}
+  \end{center}
+  \caption{$a^4/M^3=0.1$}
+  \label{fig:jet_mdot0.1}
+\end{figure*}
+
+and
+the binary separation shrinks 
+
+For observable predictions we have to project this in observer plane.
+Let the angle between the jet direction and the observer line of sight
+be $i$.  Then
+\begin{equation}
+  \psi^\mathrm{obs}\approx\frac{\psi}{\sin i}.
+\end{equation}
+
+
+This gives
+\begin{equation}
+  \psi^\mathrm{obs}=2.42^\circ \left(\frac{v_\mathrm{jet}}{0.95 c}\right)^{-1}\cos\left(\frac{\chi}{30^{\circ}}\right)\left[\sin\left(\frac{i}{15^{\circ}}\right)\right]^{-1},
+\end{equation}
+This value in itself is probably not very interesting as it depends on
+$v_\mathrm{jet}$ and $\chi$, but it gets interesting when we consider
+the evolution of $\psi^\mathrm{obs}$ below.
+
+Binary separation, jet velocity, and the two angles, tell us about the
+instantaneous configuration of the jet.  (Recall that we are only
+considering an equal mass binary.)  The jet evolution is governed by
+the dynamical evolution of the binary separation.  During the
+gas-dominated phase, this is given by
+\begin{equation}
+\frac{a}{\dot a} = \mu/\dot M = 1.1\times 10^7\, \mathrm{yr}\,\dot{\mathcal{M}}^{-1}.   
+\end{equation}
+This increases by two orders of magnitude during the GW phase to
+\begin{equation}
+\frac{a}{\dot a} = \frac{5}{256}\frac{c^5a^4}{G^3M^2\mu}=2.53\times 10^5\,\mathrm{yr}\,\frac{a_{16}^4}{M_8^3}.
+\end{equation}
+
+Figure shows the effect of this model.
+
+Note that this section introduces a set of geometrical and
+astrophysical parameters for the system we started with in the
+previous section.  List parameters and mention our assumed values.
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{a_gw.pdf} &
+    \includegraphics*[width=2.2in]{v_orb.pdf} &
+    \includegraphics*[width=2.2in]{psi.pdf}
+  \end{tabular}
+\end{center}
+\caption{Evolution of the binary separation in the gravitational wave stage.}
+\label{fig:a_gw}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{a_gas.pdf} &
+    \includegraphics*[width=2.2in]{v_orb_gas.pdf} &
+    \includegraphics*[width=2.2in]{psi_gas.pdf}
+  \end{tabular}
+\end{center}
+\caption{Evolution of the binary separation in the gas stage.}
+\label{fig:a_gas}
+\end{figure*}
+
+\begin{figure*}
+\begin{center}
+  \begin{tabular}{ccc}
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_90_ang.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_80_ang.pdf} &
+    \includegraphics*[width=2.2in]{jet_i40_psi20_beta_0_40_ang.pdf}
+  \end{tabular}
+\end{center}
+\caption{Jet structure in angular coordinates. $\beta=0.9, 0.8, 0.4$ from left to right.}
+\label{fig:ang}
+\end{figure*}
+
+
+
+Jet shown in figure has three features: (1) chirp, (2) beam twisting,
+and (3) cone opening.  This can be observed using VLBA.  Figure shows
+the evolution of the binary when it is in the gas accretion phase.  We
+have chosen steady gas accretion with $\dot{\mathcal{M}}=1$ here for
+simplicity.  Note that the starting separation here is about 100 pc.
+What we find is that in the beginning the binary orbital period is
+about $10^7$ yr. So the jet will show no signs of precision at this
+point.  However as the binary separation reduces to about 10 pc, the
+period reduces to $\sim 100$ yr and the jet will start showing
+precision.  At this point the time scale for binary merger is $\sim
+10^7$ yr.
+
+In other words \emph{since the gas accretion time scale is of the
+  order of the typical jet lifetime} the jet structure will show a
+transition from a straight jet to a precessing jet at a separation of
+\begin{equation}
+  v_\mathrm{apparant}\left(\frac{t_0}{10^7}\right).
+\end{equation}
+from the binary.  \textbf{[Convert this to arcseconds on the sky.]}
+The location at which the jet morphology shows this precision and the
+opening angle evolution give a direct constraint on the epoch of
+graviational wave emission of the binary.
+
+Thus the new insight here is that the signature of the jet precision
+due to GW-inspiral is observationally accessible. 
+
+Variability of lensed quasars constraints the size of accretion disks
+to about $10^{15}$ cm ($\sim 10^{-3}$ pc) \citep{2010ApJ...712.1129M}.
+This is smaller than the $a_\mathrm{GW}$ by a factor of less than 10.
+
+This means that the GW-induced precision will be visible in the jet
+precision for a very short distance near the source before the
+accretion disk is disrupted.
+
+Last plots in this note show some example jets.  In all these plots
+$\psi$ is the half-opening angle of the conical jet, and $i$ is the
+angle between the jet and the line of sight.
+
+A rough argument about observability: For our example, the period is
+0.1 yr at $t = 63967.3816055$ yr.  We can assume that the chirp begins
+at $t = 10^4$ yr when period is $\sim 2$ yr.  So the total duration of
+the chirp is $5.3\times 10^4$ yr.
+
+A 2 yr period gives $\sim 1$ milli-arcsec wiggles in the jet.  So the
+idea is that the wiggles will change from milli-arcsec to micro-arcsec
+over $\sim 10^5$ yr.  That is over a length scale of $\sim 30$ kpc.
+
+Now the question is: how big an angle would a 30 kpc jet subtend on
+the sky in arcsecs?
+
+Let us assume $z = 0.302$ which is the redshift of 1928+738 jet that
+Roos (1993) have studied.  At this redshift 30 kpc will subtend about
+6.748195445702 arcsec.
+
+So we are talking about mciro- to milli-arcssec scale wiggles in tens
+of arcsec scale jets.  Jets are routinely seen over hundreds of
+arcsec.
+
+Connect with LISA
+
+
+From Figures \ref{fig:a_gw} we can make these four points:
+
+\begin{itemize}
+\item From the jet structure, we can tell how long until the binary enters GW-induced inspiral.
+\item In particular, we can flag binaries that are entering GW-inspiral now.
+\item We could locate binaries that are now in GW inspiral phase but
+  have helical jet structures that are impossible to resolve.
+\item From the above jet structure, we get an idea of the history of gas inflow on the binary.
+\end{itemize}
+
+There will also probably be some spectral evolution along the jet.
+This spectral evolution will act as a cross check on the evolution
+deduced from the jet morphology.  An important advantage of this
+technique is that it allows us to locate binaries that may be
+impossible to locate even with VLBI.
+
