--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -27,25 +27,23 @@
   Cambridge, MA 02138, USA; \email{aloeb@cfa.harvard.edu}}
 
 \begin{abstract}
-Apart from a stochastic gravitational wave (GW) background, eLISA will
-also be able to detect GW emission from binary black holes.  Combined
-GW and electromagnetic observations of compact binary mergers should
-enable detailed studies of astrophysical processes in the strong-field
-gravity regime.  Here we show that if one of component BHs of the
-binary has an accretion disk with an associated jet, the morphology of
-the jet can act as an electromagnetic counterpart to the GW signal
-from the binary.  For binaries with mass $10^7$--$10^{10}$ M$_\odot$
-at redshifts $z<0.5$, the jet precesses along a biconical surface due
-to the binary's orbital motion.  When the binary enters the GW phase
-of its evolution, the opening angle widens, the jet exhibits
-milliarcsecond scale wiggles and the conical surface of jet precession
-is twisted due to the superluminal motion.  These morphological
-features can be used to constrain the dyanamical parameters of the
-binary.  Monitoring of jets with these features in current and
-archival data will put a lower limit on the sources that could be
-detected by GW experiments such as eLISA and Pulsar Timing Arrays
-(PTAs).  In the future, microarcsecond interferometry with experiments
-such as SKA will increase the potential usefulness of this technique.  
+We study a novel electromagnetic signature of supermassive black hole
+binaries whose inspiral stars being dominated by gravitational wave
+(GW) emission. Combined GW and electromagnetic observations of compact
+binary mergers would allow to use them as standard sirens for
+cosmology and a testing ground of general relativity.  If one of the
+binary members produces a radio jet, the helical chirping morphology
+of the jet can be used to infer the binary parameters.  For binaries
+with mass $10^7$--$10^{10}$ M$_\odot$ at redshifts $z<0.5$, the jet
+precesses along a biconical surface due to the binary's orbital
+motion.  When the binary enters the GW phase of its evolution, the
+opening angle widens, the jet exhibits milliarcsecond scale wiggles
+and the conical surface of jet precession is twisted due to the
+superluminal motion.  Monitoring these features in current and
+archival data will place a lower limit on sources that could be
+detected by eLISA and Pulsar Timing Arrays.  In the future,
+microarcsecond interferometry with the Square Kilometer Array will
+increase the potential usefulness of this technique.
 \end{abstract}
 
 \keywords{BHs}
